# C-Programming

./: laba2_2.c  laba2_3.c  laba2_4.c  laba2_5.c  laba6.c  task1.c  task2.c  task3.c
Kursovaya_Prog/: CMakeLists.txt  functions.c  functions.h  input.txt  main.c  output.txt  test_functions.c
Laba1/: laba1_1.c  laba1_2.c  laba1_3.c
Laba10/: Makefile  functions.c  functions.h  main.c
Laba11/: lab11_1.c  lab11_2.c  lab11_3.c  lab11_4.c
Laba12/task0/: Makefile  main
Laba12/task1/: CMakeLists.txt
Laba12/task1/background/: CMakeLists.txt
Laba12/task1/pipes/: CMakeLists.txt
Laba13/: laba1.1_2  laba1.1_2.c  laba1.2_2  laba1.2_2.c
Laba15/: Lab2_3.docx  file.txt  sort.c
Laba16/: laba2_4  laba2_4.c  my_file.txt
Laba17/: laba2_5  laba2_5.c  owl.py
Laba18/: CMakeLists.txt  functions.c  functions.h  main.c  prog
Laba19/: Laba2_7_4.c  Laba2_7_5.c  laba2_7_4  laba2_7_5  time.py
Laba2/: laba2_1.c
Laba20/: sort.c  sort.h  test_sort.c  test_sorts
Laba20/cmocka-1.1.7/: compile_commands.json
Laba2_7/: Laba2_7_4.c  Laba7.md
Laba3/: laba3.c
Laba4/: laba4.c
Laba5/: laba5.c
Laba6/: laba6.c
Laba7/: laba7.c
Laba8/: laba8.c
Laba9/: laba9.c
Optional/: recursion.c  snail.c  tinkoff.c
